--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,34 @@
-fastapi
-uvicorn
-sqlalchemy
-psycopg2-binary
-python-jose
-passlib[bcrypt]
-pydantic
-python-dotenv
+fastapi==0.128.0
+uvicorn==0.40.0
+
+# Database
+SQLAlchemy==2.0.45
+psycopg2-binary==2.9.11
+
+# Auth
+python-jose==3.5.0
+passlib[bcrypt]==1.7.4
+python-dotenv==1.2.1
+email-validator==2.3.0
+
+# RAG + Embeddings
+sentence-transformers==5.2.0
+transformers==4.57.6
+torch==2.9.1
+
+# PDF Processing
+PyPDF2==3.0.1
+
+# Utilities
+requests==2.32.5
+python-dateutil==2.9.0.post0
+
+# Pinecone
+pinecone==8.0.0
+
+# Pydantic v2
+pydantic==2.12.5
+pydantic-settings==2.12.0
+
+# Optional but recommended
+orjson==3.11.5
